plugins {
    id 'java-library'
}

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {
    implementation 'org.jodd:jodd-core:5.1.4'
    implementation 'org.jodd:jodd-http:5.1.4'
    implementation 'org.jodd:jodd-json:5.1.4'

    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    testCompileOnly 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'

    implementation 'io.projectreactor:reactor-core:3.4.9'

    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.0.0'
}